# partitioner

./: CMakeLists.txt  README.md  build.sh  libXilinx.edif  test_ariane.tcl  test_sta.cpp  test_timing_paths.tcl
cmake/: ProjectAPI.cmake  ProjectAPIInternal.cmake  ProjectBranding.cmake
docs/: EXTENDING.md  OPENSTA_INTEGRATION_PLAN.md
examples/: run_partition.sh  test_opensta_real.sh  test_with_openroad_example.sh
examples/simple/: test.lib  test.sdc  test.v
lib/: CMakeLists.txt
lib/sta/: CMakeLists.txt
lib/sta/cmake/: FindCUDD.cmake
lib/sta/pregenerated/: LibExprLex.cc  LibExprParse.cc  LibExprParse.hh  LibertyLex.cc  LibertyLocation.hh  LibertyParse.cc  LibertyParse.hh  SaifLex.cc  SaifLocation.hh  SaifParse.cc  SaifParse.hh  SdfLex.cc  SdfLocation.hh  SdfParse.cc  SdfParse.hh  SpefLex.cc  SpefLocation.hh  SpefParse.cc  SpefParse.hh  VerilogLex.cc  VerilogLocation.hh  VerilogParse.cc  VerilogParse.hh
openroad_examples/timing-aware-partitioning/: ariane_part_design.hgr.part.5.update
partitioner/: CMakeLists.txt  main.cpp
partitioner/adapter/: OpenStaAdapter.cpp
partitioner/examples/min-cut-partitioning/: sparcT1_chip2.hgr.part.2
partitioner/src/: ArtNetSpec.cpp  Coarsener.h  Evaluator.cpp  Evaluator.h  Hypergraph.cpp  Hypergraph.h  KWayFMRefine.h  Multilevel.cpp  Multilevel.h  PartitionMgr.cpp  Partitioner.cpp  Partitioner.h  Refiner.cpp  Refiner.h  TritonPart.cpp  TritonPart.h
src/: CMakeLists.txt  TritonPartCore.cpp  TritonPartCore.h
src/adapter/: NetlistAdapter.h  OpenStaAdapter.cpp  OpenStaAdapter.h  OpenStaAdapter_timing.cpp
src/apps/: CMakeLists.txt
src/apps/easypart/: CMakeLists.txt  main.cpp
src/examples/timing-aware-partitioning/: run.sh  run_timing_aware_flow.tcl
src/libs/: CMakeLists.txt
src/libs/shell/: CMakeLists.txt  argument.cpp  argument.h  cmdlog.cpp  cmdlog.h  register.cpp  register.h  tclmanager.cpp  tclmanager.h
src/libs/shell/utils/: util.cpp  util.h
src/src/: Coarsener.cpp  ILPRefine.cpp  KWayFMRefine.cpp  Utilities.cpp
src/utils/: Logger.h
tests/openroad_comparison/ariane/: README.md  run_test.sh
tests/openroad_comparison/ariane/results/: openroad_ariane.hgr.int  run_openroad.tcl  run_openroad_evaluate.tcl  tritonpart_ariane.hgr.int
